# rtow

./: CMakeLists.txt  README.md
src/: color.hpp  main.cpp  ray.hpp  test_ppm.cpp  vec3.hpp
